--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0"
   }
 }
